--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     padding: 15rem;
     align-items: center;
     justify-content: center;
-    background-image: url("D:/projects and internships/quotegenerator/bg.jpg");
+    background-image: url('bg.jpg');
     background-repeat: no-repeat;
     background-size:1600px 780px;
 }
